--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Joäo Restaurant's. O melhor restarante de gastronomia fina do mundo.">
+  <!-- Estilos -->
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
+  <!-- Fontes -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,500;0,600;0,700;1,300;1,500&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
   <title>João Restaurant's</title>
 </head>
 
 <body>
-
+  <h1 class="font-1-xl-1">teste</h1>
   <script src="./script.js"></script>
 </body>
 
