--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
 </head>
 
 <body>
-  <h1 class="font-1-xl-1">teste</h1>
+  <header>
+    <div class="header-bg">
+      <div class="header container">
+        <a href="./"><img src="./img/icones/logo.svg" alt="" width="70" height="53"></a>
+        <ul class="font-2-l-2 cor-c9">
+          <li> <a href="./unidades.html">Unidades</a></li>
+          <li> <a href="./cardapio.html">Cardápio</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
   <script src="./script.js"></script>
 </body>
 
