--- a/unidades.html
+++ b/unidades.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Joäo Restaurant's. O melhor restarante de gastronomia fina do mundo.">
+  <!-- <meta name="description" content="Joäo Restaurant's. O melhor restarante de gastronomia fina do mundo."> -->
   <!-- Estilos -->
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
@@ -12,10 +12,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,500;0,600;0,700;1,300;1,500&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
-  <title>João Restaurant's</title>
+  <title>Unidaedes</title>
 </head>
 
-<body id="home">
+<body>
   <header>
     <div class="header-bg">
       <div class="header container">
@@ -27,24 +27,6 @@
       </div>
     </div>
   </header>
-
-  <main>
-    <section>
-      <div class="introducao-bg">
-        <div class="introducao container">
-          <div class="introducao-conteudo">
-            <h1 class="font-1-x col-c9">João Restaurant's</h1>
-            <p class="font-2-s cor-c6">Com mais de 30 anos de tradição, a João Restaurant's é a maior companhia de gastronomia fina do mundo.
-            </p>
-            <a class="introducao-btn font-2-s-1 cor-c0 " href="./unidades.html">Venha conhecer</a>
-          </div>
-          <picture>
-            <img src="./img/restaurante1-min.jpg" alt="">
-          </picture>
-        </div>
-      </div>
-    </section>
-  </main>
   <script src="./script.js"></script>
 </body>
 
