Introducao home arrumad + responsivo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main>
     <section>
       <div class="introducao-bg">
-        <div class="introducao container">
+        <div class="introducao">
           <div class="introducao-conteudo">
             <h1 class="font-1-x col-c9">João Restaurant's</h1>
             <p class="font-2-s cor-c6">Com mais de 30 anos de tradição, a João Restaurant's é a maior companhia de gastronomia fina do mundo.
