--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="cardapio-bg">
+        <div class="cardapio">
+          <picture class="cardapio-detalhe">
+            <img src="./img/detalhe.svg" alt="">
+          </picture>
+          <picture>
+            <img class="foto" src="./img/cardapio-min.jpg" alt="">
+          </picture>
+          <div class="cardapio-conteudo">
+            <h1 class="font-1-xl cor-p1">Cardápio</h1>
+            <p class="font-2-s cor-c2">Com um dos cardápios mais variados do mundo, a João Restaurant's se destaca pela qualidade em seus produtos selecionados direto do produtor. </p>
+            <a class="font-2-s-1 cor-c9" href="./cardapio.html">Conheça agora</a>
+          </div>
+        </div>
+      </div>
+
+    </section>
   </main>
   <script src="./script.js"></script>
 </body>
