--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       </div>
     </div>
   </header>
-
   <main>
     <section>
       <div class="introducao-bg">
@@ -54,7 +53,7 @@
             <img class="foto" src="./img/cardapio-min.jpg" alt="">
           </picture>
           <div class="cardapio-conteudo">
-            <h1 class="font-1-xl cor-p1">Cardápio</h1>
+            <h1 class="font-1-x cor-p1">Cardápio</h1>
             <p class="font-2-s cor-c2">Com um dos cardápios mais variados do mundo, a João Restaurant's se destaca pela qualidade em seus produtos selecionados direto do produtor. </p>
             <a class="font-2-s-1 cor-c9" href="./cardapio.html">Conheça agora</a>
           </div>
