Parceiros quase pronto

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1 class="font-1-x col-c9">João Restaurant's</h1>
             <p class="font-2-s cor-c6">Com mais de 30 anos de tradição, a João Restaurant's é a maior companhia de gastronomia fina do mundo.
             </p>
-            <a class="introducao-btn font-2-s-1 cor-c0 " href="./unidades.html">Venha conhecer</a>
+            <a class="font-2-s-1 cor-c0 botao" href="./unidades.html">Venha conhecer</a>
           </div>
           <picture>
             <img src="./img/restaurante1-min.jpg" alt="">
@@ -55,12 +55,24 @@
           <div class="cardapio-conteudo">
             <h1 class="font-1-x cor-p1">Cardápio</h1>
             <p class="font-2-s cor-c2">Com um dos cardápios mais variados do mundo, a João Restaurant's se destaca pela qualidade em seus produtos selecionados direto do produtor. </p>
-            <a class="font-2-s-1 cor-c9" href="./cardapio.html">Conheça agora</a>
+            <a class="font-2-s-1 cor-c9 botao" href="./cardapio.html">Conheça agora</a>
           </div>
         </div>
       </div>
 
     </section>
+    <article>
+      <div class="parceiros">
+        <h1 class="font-1-xl-1 cor-c7">Nossos parceiros</h1>
+        <div class="parceiros-conteudo">
+          <img src="./img/parceiros/parceiro1.svg" alt="">
+          <img src="./img/parceiros/parceiro2.svg" alt="">
+          <img src="./img/parceiros/parceiro3.svg" alt="">
+          <img src="./img/parceiros/parceiro4.svg" alt="">
+          <img src="./img/parceiros/parceiro5.svg" alt="">
+        </div>
+      </div>
+    </article>
   </main>
   <script src="./script.js"></script>
 </body>
