--- a/index.html
+++ b/index.html
@@ -74,6 +74,32 @@
       </div>
     </article>
   </main>
+  <footer>
+    <div class="footer-bg">
+      <div class="footer container">
+        <picture>
+          <a class="footer-logo" href="./"><img src="./img/icones/logo.svg" alt=""></a>
+        </picture>
+        <div class="footer-conteudo  font-2-s cor-c7">
+          <ul class="footer-internos">
+            <li> <a href="./unidades.html">Unidades</a> </li>
+            <li> <a href="./cardapio.html">Cardapio</a>
+            </li>
+            <li> <a href="./termos.html">Termos e condições</a></li>
+            <li> <a href="./trabalhe_conosco.html">Trabalhe Conosco</a> </li>
+
+          </ul>
+          <ul class="footer-externos">
+            <li><a href="./"><img src="./img/icones/facebook.svg" alt=""></a></li>
+            <li><a href="./"><img src="./img/icones/instagram.svg" alt=""></a></li>
+            <li><a href="./"><img src="./img/icones/X-Twitter.svg" alt=""></a></li>
+            <li><a href="./"><img src="./img/icones/Linkedin.svg" alt=""></a></li>
+          </ul>
+          <span>Alguns direitos reservados.</span>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="./script.js"></script>
 </body>
 
