Alterações no responsivo

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <p class="font-2-s cor-c2">Com um dos cardápios mais variados do mundo, a João Restaurant's se destaca pela qualidade em seus produtos selecionados direto do produtor. </p>
             <a class="font-2-s-1 cor-c9 botao" href="./cardapio.html">Conheça agora</a>
           </div>
+          <picture class="cardapio-detalhe_e">
+            <img src="./img/icones/detalhe_e.svg" alt="">
+          </picture>
         </div>
       </div>
 
@@ -87,7 +90,6 @@
             </li>
             <li> <a href="./termos.html">Termos e condições</a></li>
             <li> <a href="./trabalhe_conosco.html">Trabalhe Conosco</a> </li>
-
           </ul>
           <ul class="footer-externos">
             <li><a href="./"><img src="./img/icones/facebook.svg" alt=""></a></li>
