Unidades.html feito

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </header>
   <main>
-    <section>
+    <article>
       <div class="introducao-bg">
         <div class="introducao">
           <div class="introducao-conteudo">
@@ -42,8 +42,8 @@
           </picture>
         </div>
       </div>
-    </section>
-    <section>
+    </article>
+    <article>
       <div class="cardapio-bg">
         <div class="cardapio">
           <picture class="cardapio-detalhe">
@@ -63,8 +63,8 @@
         </div>
       </div>
 
-    </section>
-    <article>
+    </article>
+    <section aria-label="parceiros">
       <div class="parceiros">
         <h1 class="font-1-xl-1 cor-c7">Nossos parceiros</h1>
         <div class="parceiros-conteudo">
@@ -75,7 +75,7 @@
           <img src="./img/parceiros/parceiro5.svg" alt="">
         </div>
       </div>
-    </article>
+    </section>
   </main>
   <footer>
     <div class="footer-bg">
@@ -85,11 +85,12 @@
         </picture>
         <div class="footer-conteudo  font-2-s cor-c7">
           <ul class="footer-internos">
-            <li> <a href="./unidades.html">Unidades</a> </li>
-            <li> <a href="./cardapio.html">Cardapio</a>
+            <li>
+              <a href="./unidades.html">Unidades</a>
+              <a href="./cardapio.html">Cardapio</a>
+              <a href="./termos.html">Termos e condições</a>
+              <a href="./trabalhe_conosco.html">Trabalhe Conosco</a>
             </li>
-            <li> <a href="./termos.html">Termos e condições</a></li>
-            <li> <a href="./trabalhe_conosco.html">Trabalhe Conosco</a> </li>
           </ul>
           <ul class="footer-externos">
             <li><a href="./"><img src="./img/icones/facebook.svg" alt=""></a></li>
