--- a/unidades.html
+++ b/unidades.html
@@ -15,7 +15,7 @@
   <title>Unidaedes</title>
 </head>
 
-<body>
+<body id="unidades">
   <header>
     <div class="header-bg">
       <div class="header container">
@@ -27,6 +27,61 @@
       </div>
     </div>
   </header>
+  <main class="unidades">
+    <div class="unidades-intro container">
+      <p class="font-2-l cor-c9 ">Venha conhecer uma de nossas unidades</p>
+    </div>
+    <article>
+      <div class="unidades-bg">
+        <div class="unidade-sp container ">
+          <picture>
+            <img src="./img/cidade1-min.jpg" alt="">
+          </picture>
+          <div class="unidade-sp-conteudo">
+            <h1 class="font-1-xl cor-p3">São Paulo</h1>
+            <p class="font-2-s cor-c2">A mais antiga e tradicional unidade da João Restaurant's, localizada em um dos mais luxuosos bairros da maior metrópole da América Latina</p>
+            <p class="font-2-s cor-c2">Rua Professor Azevedo Amaral, 70 Piso Térreo, R. Prof. Azevedo Amaral, 70 - 1º Piso - Jardim Paulista, São Paulo - SP, 01409-030</p>
+          </div>
+        </div>
+        <div class="unidade-rj container">
+          <div class="unidade-rj-conteudo">
+            <h1 class="font-1-xl cor-p3">Rio de Janeiro</h1>
+            <p class="font-2-s cor-c2">Venha conhecer a mais nova unidade localizada na cidade maravilhosa, o Rio de Janeiro.</p>
+            <p class="font-2-s cor-c2">Rua José Linhares, 85 - Leblon, Rio de Janeiro - RJ, 22430-220</p>
+          </div>
+          <picture>
+            <img src="./img/cidade2-min.jpg" alt="">
+          </picture>
+        </div>
+      </div>
+    </article>
+  </main>
+  <footer>
+    <div class="footer-bg">
+      <div class="footer container">
+        <picture>
+          <a class="footer-logo" href="./"><img src="./img/icones/logo.svg" alt=""></a>
+        </picture>
+        <div class="footer-conteudo  font-2-s cor-c7">
+          <ul class="footer-internos">
+            <li>
+              <a href="./unidades.html">Unidades</a>
+              <a href="./cardapio.html">Cardapio</a>
+              <a href="./termos.html">Termos e condições</a>
+              <a href="./trabalhe_conosco.html">Trabalhe Conosco</a>
+            </li>
+          </ul>
+          <ul class="footer-externos">
+            <li><a href="./"><img src="./img/icones/facebook.svg" alt=""></a></li>
+            <li><a href="./"><img src="./img/icones/instagram.svg" alt=""></a></li>
+            <li><a href="./"><img src="./img/icones/X-Twitter.svg" alt=""></a></li>
+            <li><a href="./"><img src="./img/icones/Linkedin.svg" alt=""></a></li>
+          </ul>
+          <span>Alguns direitos reservados.</span>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="./script.js"></script>
 </body>
 
