--- a/cardapio.html
+++ b/cardapio.html
@@ -15,7 +15,7 @@
   <title>Cardápio</title>
 </head>
 
-<body>
+<body id="cardapio">
   <header>
     <div class="header-bg">
       <div class="header container">
@@ -27,6 +27,85 @@
       </div>
     </div>
   </header>
+  <main class="cardapio">
+    <div class="cardapio-info container">
+      <p class="font-2-l cor-c9">Conheça as melhores opções da gastronomia fina</p>
+    </div>
+    <article class="pratos-bg">
+      <div class="pratos-titulo container">
+        <h1 class="font-2-xl-1 cor-c9">Pratos</h1>
+      </div>
+      <div class="container">
+        <ul class="pratos-conteudo cor-c9">
+          <li>
+            <img src="./img/pratos/prato1.jpg" alt="">
+            <h2 class="font-2-l-1">Bruschetta de salmão</h2>
+            <p class="font-2-xs">Pão Italiano, molho shoyo japonês, salmão da Noruega e especiarias da Índia.</p>
+          </li>
+          <li>
+            <img src="./img/pratos/prato2.jpg" alt="">
+            <h2 class="font-2-l-1">Mile Pure</h2>
+            <p class="font-2-xs">File mignon argentino destilado em vinho francês como cogumelos japoneses.</p>
+          </li>
+          <li>
+            <img src="./img/pratos/prato3.jpg" alt="">
+            <h2 class="font-2-l-1">Risoto com queijo brie</h2>
+            <p class="font-2-xs">Queijo brie holandês, arroz da Indonésia, vinho seco do Uruguai e pitstache especial do sudoeste japonês.</p>
+          </li>
+        </ul>
+      </div>
+    </article>
+    <article class="sobremesas-bg">
+      <div class="sobremesas-titulo container">
+        <h1 class="font-2-xl-1 cor-p1">Sobremesas</h1>
+      </div>
+      <div class="container">
+        <ul class="sobremesas-conteudo cor-c1">
+          <li>
+            <img src="./img/pratos/prato4.jpg" alt="">
+            <h2 class="font-2-l-1">Crème de fraises</h2>
+            <p class="font-2-xs">Morangos franceses, açúcar belga, nozes do nordeste brasileiro e hortelã chilena.</p>
+          </li>
+          <li>
+            <img src="./img/pratos/prato5.jpg" alt="">
+            <h2 class="font-2-l-1">Tarte de maçã</h2>
+            <p class="font-2-xs">Maçãs Golden da região norte da Califórnia, suco de limão siciliano, farinha e manteiga do sul da Alemanha.</p>
+          </li>
+          <li>
+            <img src="./img/pratos/prato6.jpg" alt="">
+            <h2 class="font-2-l-1">Petit Gâteau</h2>
+            <p class="font-2-xs">O mais clássico e prestigiado doce da gastronomia francesa em toda a sua explosão de sabores.</p>
+          </li>
+        </ul>
+      </div>
+    </article>
+  </main>
+  <footer>
+    <div class="footer-bg">
+      <div class="footer container">
+        <picture>
+          <a class="footer-logo" href="./"><img src="./img/icones/logo.svg" alt=""></a>
+        </picture>
+        <div class="footer-conteudo  font-2-s cor-c7">
+          <ul class="footer-internos">
+            <li>
+              <a href="./unidades.html">Unidades</a>
+              <a href="./cardapio.html">Cardapio</a>
+              <a href="./termos.html">Termos e condições</a>
+              <a href="./trabalhe_conosco.html">Trabalhe Conosco</a>
+            </li>
+          </ul>
+          <ul class="footer-externos">
+            <li><a href="./"><img src="./img/icones/facebook.svg" alt=""></a></li>
+            <li><a href="./"><img src="./img/icones/instagram.svg" alt=""></a></li>
+            <li><a href="./"><img src="./img/icones/X-Twitter.svg" alt=""></a></li>
+            <li><a href="./"><img src="./img/icones/Linkedin.svg" alt=""></a></li>
+          </ul>
+          <span>Alguns direitos reservados.</span>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="./script.js"></script>
 </body>
 
