--- a/unidades.html
+++ b/unidades.html
@@ -40,7 +40,7 @@
           <div class="unidade-sp-conteudo">
             <h1 class="font-1-xl cor-p3">São Paulo</h1>
             <p class="font-2-s cor-c2">A mais antiga e tradicional unidade da João Restaurant's, localizada em um dos mais luxuosos bairros da maior metrópole da América Latina</p>
-            <p class="font-2-s cor-c2">Rua Professor Azevedo Amaral, 70 Piso Térreo, R. Prof. Azevedo Amaral, 70 - 1º Piso - Jardim Paulista, São Paulo - SP, 01409-030</p>
+            <p class="font-2-s cor-c2">Rua Professor Azevedo Amaral, 70 Piso Térreo - Jardim Paulista, São Paulo - SP, 01409-030</p>
           </div>
         </div>
         <div class="unidade-rj container">
