--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
       </div>
     </article>
     <article>
-      <div class="cardapio-bg">
-        <div class="cardapio">
-          <picture class="cardapio-detalhe">
+      <div class="home-cardapio-bg">
+        <div class="home-cardapio">
+          <picture class="home-cardapio-detalhe">
             <img src="./img/detalhe.svg" alt="">
           </picture>
           <picture>
             <img class="foto" src="./img/cardapio-min.jpg" alt="">
           </picture>
-          <div class="cardapio-conteudo">
+          <div class="home-cardapio-conteudo">
             <h1 class="font-1-x cor-p1">Cardápio</h1>
             <p class="font-2-s cor-c2">Com um dos cardápios mais variados do mundo, a João Restaurant's se destaca pela qualidade em seus produtos selecionados direto do produtor. </p>
-            <a class="font-2-s-1 cor-c9 botao" href="./cardapio.html">Conheça agora</a>
+            <a class="font-2-s-1 cor-c9 botao" href="./home-cardapio.html">Conheça agora</a>
           </div>
-          <picture class="cardapio-detalhe_e">
+          <picture class="home-cardapio-detalhe_e">
             <img src="./img/icones/detalhe_e.svg" alt="">
           </picture>
         </div>
