--- a/cardapio.html
+++ b/cardapio.html
@@ -31,12 +31,12 @@
     <div class="cardapio-info container">
       <p class="font-2-l cor-c9">Conheça as melhores opções da gastronomia fina</p>
     </div>
-    <article class="pratos-bg">
-      <div class="pratos-titulo container">
+    <article class="pratos-bg cardapio-bgs">
+      <div class="cardapio-titulo container">
         <h1 class="font-2-xl-1 cor-c9">Pratos</h1>
       </div>
       <div class="container">
-        <ul class="pratos-conteudo cor-c9">
+        <ul class="cardapio-conteudo cor-c9">
           <li>
             <img src="./img/pratos/prato1.jpg" alt="">
             <h2 class="font-2-l-1">Bruschetta de salmão</h2>
@@ -55,12 +55,12 @@
         </ul>
       </div>
     </article>
-    <article class="sobremesas-bg">
-      <div class="sobremesas-titulo container">
+    <article id="sobremesas-bg" class="cardapio-bgs">
+      <div class="cardapio-titulo container">
         <h1 class="font-2-xl-1 cor-p1">Sobremesas</h1>
       </div>
       <div class="container">
-        <ul class="sobremesas-conteudo cor-c1">
+        <ul class="cardapio-conteudo cor-c1">
           <li>
             <img src="./img/pratos/prato4.jpg" alt="">
             <h2 class="font-2-l-1">Crème de fraises</h2>
