--- a/unidades.html
+++ b/unidades.html
@@ -34,12 +34,15 @@
     <article>
       <div class="unidades-bg">
         <div class="unidade-sp container ">
-          <picture>
-            <img src="./img/cidade1-min.jpg" alt="">
+          <picture class="pic-img1">
+            <img class="img1" src="./img/cidade1-min.jpg" alt="">
           </picture>
           <div class="unidade-sp-conteudo">
             <h1 class="font-1-xl cor-p3">São Paulo</h1>
             <p class="font-2-s cor-c2">A mais antiga e tradicional unidade da João Restaurant's, localizada em um dos mais luxuosos bairros da maior metrópole da América Latina</p>
+            <picture>
+              <img class="img2" src="./img/cidade1-min.jpg" alt="">
+            </picture>
             <p class="font-2-s cor-c2">Rua Professor Azevedo Amaral, 70 Piso Térreo - Jardim Paulista, São Paulo - SP, 01409-030</p>
           </div>
         </div>
@@ -47,10 +50,13 @@
           <div class="unidade-rj-conteudo">
             <h1 class="font-1-xl cor-p3">Rio de Janeiro</h1>
             <p class="font-2-s cor-c2">Venha conhecer a mais nova unidade localizada na cidade maravilhosa, o Rio de Janeiro.</p>
+            <picture>
+              <img class="img2" src="./img/cidade2-min.jpg" alt="">
+            </picture>
             <p class="font-2-s cor-c2">Rua José Linhares, 85 - Leblon, Rio de Janeiro - RJ, 22430-220</p>
           </div>
-          <picture>
-            <img src="./img/cidade2-min.jpg" alt="">
+          <picture class="pic-img1">
+            <img class="img1" src="./img/cidade2-min.jpg" alt="">
           </picture>
         </div>
       </div>
