Cardapio pratos feito

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="home-cardapio-conteudo">
             <h1 class="font-1-x cor-p1">Cardápio</h1>
             <p class="font-2-s cor-c2">Com um dos cardápios mais variados do mundo, a João Restaurant's se destaca pela qualidade em seus produtos selecionados direto do produtor. </p>
-            <a class="font-2-s-1 cor-c9 botao" href="./cardapio.html">Conheça agora</a>
+            <a class="font-2-s-1 cor-c9 botao" href="./cardapio.html">Saiba mais</a>
           </div>
           <picture class="home-cardapio-detalhe_e">
             <img src="./img/icones/detalhe_e.svg" alt="">
