--- a/cardapio.html
+++ b/cardapio.html
@@ -29,82 +29,72 @@
     </div>
   </header>
   <main class="cardapio">
-    <div class="cardapio-info container">
-      <p class="font-2-l cor-c9">Conheça as melhores opções da gastronomia fina</p>
-    </div>
-    <article class="pratos-bg cardapio-bgs">
-      <div class="cardapio-titulo container">
-        <h1 class="font-2-xl-1 cor-c9">Pratos</h1>
-      </div>
-      <div class="container">
-        <ul class="cardapio-conteudo cor-c9">
-          <li>
-            <img src="./img/pratos/prato1.jpg" alt="">
-            <h2 class="font-2-l-1">Bruschetta de salmão</h2>
-            <p class="font-2-xs">Pão Italiano, molho shoyo japonês, salmão da Noruega e especiarias da Índia.</p>
-          </li>
-          <li>
-            <img src="./img/pratos/prato2.jpg" alt="">
-            <h2 class="font-2-l-1">Mile Pure</h2>
-            <p class="font-2-xs">File mignon argentino destilado em vinho francês como cogumelos japoneses.</p>
-          </li>
-          <li>
-            <img src="./img/pratos/prato3.jpg" alt="">
-            <h2 class="font-2-l-1">Risoto com queijo brie</h2>
-            <p class="font-2-xs">Queijo brie holandês, arroz da Indonésia, vinho seco do Uruguai e pitstache especial do sudoeste japonês.</p>
-          </li>
-        </ul>
-      </div>
+    <article aria-label="introdução" class="pratos-introducao container">
+      <span class="font-2-l cor-c9">Conheça as melhores opções da gastronomia fina</span>
     </article>
-    <article id="sobremesas-bg" class="cardapio-bgs">
-      <div class="cardapio-titulo container">
-        <h1 class="font-2-xl-1 cor-p1">Sobremesas</h1>
+    <section class="pratos-bg">
+      <div class="pratos-conteudo container">
+        <div>
+          <h1 class="font-1-xl cor-c7">Pratos</h1>
+          <p class="font-2-s cor-c7">Os melhores pratos da gastronomia mundial. Venha saborear essa explosão de sabores consagrada pelos melhores chefs do mundo.</p>
+          <picture>
+            <img src="./img/pratos/prato0.jpg" alt="">
+          </picture>
+          <a class="font-2-s cor-p8" href="./pratos.html">CONHEÇA AGORA</a>
+        </div>
+        <picture>
+          <img src="./img/pratos/prato0.jpg" alt="">
+        </picture>
       </div>
-      <div class="container">
-        <ul class="cardapio-conteudo cor-c1">
-          <li>
-            <img src="./img/pratos/prato4.jpg" alt="">
-            <h2 class="font-2-l-1">Crème de fraises</h2>
-            <p class="font-2-xs">Morangos franceses, açúcar belga, nozes do nordeste brasileiro e hortelã chilena.</p>
-          </li>
-          <li>
-            <img src="./img/pratos/prato5.jpg" alt="">
-            <h2 class="font-2-l-1">Tarte de maçã</h2>
-            <p class="font-2-xs">Maçãs Golden da região norte da Califórnia, suco de limão siciliano, farinha e manteiga do sul da Alemanha.</p>
-          </li>
-          <li>
-            <img src="./img/pratos/prato6.jpg" alt="">
-            <h2 class="font-2-l-1">Petit Gâteau</h2>
-            <p class="font-2-xs">O mais clássico e prestigiado doce da gastronomia francesa em toda a sua explosão de sabores.</p>
-          </li>
-        </ul>
-      </div>
-    </article>
+    </section>
+    <section class="sobremesas">
+
+    </section>
   </main>
   <footer>
     <div class="footer-bg">
-      <div class="footer container">
-        <picture>
-          <a class="footer-logo" href="./"><img src="./img/icones/logo.svg" alt=""></a>
-        </picture>
-        <div class="footer-conteudo  font-2-s cor-c7">
-          <ul class="footer-internos">
-            <li>
-              <a href="./unidades.html">Unidades</a>
-              <a href="./cardapio.html">Cardapio</a>
-              <a href="./termos.html">Termos e condições</a>
-              <a href="./trabalhe_conosco.html">Trabalhe Conosco</a>
-            </li>
-          </ul>
-          <ul class="footer-externos">
-            <li><a href="./"><img src="./img/icones/facebook.svg" alt=""></a></li>
-            <li><a href="./"><img src="./img/icones/instagram.svg" alt=""></a></li>
-            <li><a href="./"><img src="./img/icones/X-Twitter.svg" alt=""></a></li>
-            <li><a href="./"><img src="./img/icones/Linkedin.svg" alt=""></a></li>
-          </ul>
-          <span>Alguns direitos reservados.</span>
-        </div>
+
+      <div class="footer-conteudo container font-2-s cor-c7">
+        <ul class="footer-links">
+          <li>
+            <a href="./unidades.html">Unidades</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="./sao-paulo.html">São Paulo</a>
+              <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Rio de Janeiro</a>
+            </div>
+          </li>
+          <li>
+            <a href="./cardapio.html">Cardapio</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="./pratos.html">Pratos</a>
+              <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Sobremesas</a>
+            </div>
+          </li>
+          <li>
+            <a href="./cardapio.html">Contatos</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="./fale-conosco.html">Fale conosco</a>
+              <a class="font-2-xs cor-c6" href="./trabalhe_conosco.html">Trabalhe conosco</a>
+            </div>
+          </li>
+          <li>
+            <a href="./cardapio.html">Outros</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="./termos.html">Termos e condições</a>
+            </div>
+          </li>
+          <li>
+            <span>Siga-nos</span>
+            <div class="icones">
+              <a href="./"><img src="./img/icones/facebook.svg" alt=""></a>
+              <a href="./"><img src="./img/icones/Twitter.svg" alt=""></a>
+              <a href="./"><img src="./img/icones/Linkedin.svg" alt=""></a>
+            </div>
+          </li>
+        </ul>
+        <span class="footer-fim">Alguns direitos reservados © João Restaurant's Group</span>
       </div>
+
     </div>
   </footer>
   <script src="./script.js"></script>
