--- a/termos.html
+++ b/termos.html
@@ -52,28 +52,48 @@
   </main>
   <footer>
     <div class="footer-bg">
-      <div class="footer container">
-        <picture>
-          <a class="footer-logo" href="./"><img src="./img/icones/logo.svg" alt=""></a>
-        </picture>
-        <div class="footer-conteudo  font-2-s cor-c7">
-          <ul class="footer-internos">
-            <li>
-              <a href="./unidades.html">Unidades</a>
-              <a href="./cardapio.html">Cardapio</a>
-              <a href="./termos.html">Termos e condições</a>
-              <a href="./trabalhe_conosco.html">Trabalhe Conosco</a>
-            </li>
-          </ul>
-          <ul class="footer-externos">
-            <li><a href="./"><img src="./img/icones/facebook.svg" alt=""></a></li>
-            <li><a href="./"><img src="./img/icones/instagram.svg" alt=""></a></li>
-            <li><a href="./"><img src="./img/icones/X-Twitter.svg" alt=""></a></li>
-            <li><a href="./"><img src="./img/icones/Linkedin.svg" alt=""></a></li>
-          </ul>
-          <span>Alguns direitos reservados.</span>
-        </div>
+
+      <div class="footer-conteudo container font-2-s cor-c7">
+        <ul class="footer-links">
+          <li>
+            <a href="./unidades.html">Unidades</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="./sao-paulo.html">São Paulo</a>
+              <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Rio de Janeiro</a>
+            </div>
+          </li>
+          <li>
+            <a href="./cardapio.html">Cardapio</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="./pratos.html">Pratos</a>
+              <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Sobremesas</a>
+            </div>
+          </li>
+          <li>
+            <a href="./cardapio.html">Contatos</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="./fale-conosco.html">Fale conosco</a>
+              <a class="font-2-xs cor-c6" href="./trabalhe_conosco.html">Trabalhe conosco</a>
+            </div>
+          </li>
+          <li>
+            <a href="./cardapio.html">Outros</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="./termos.html">Termos e condições</a>
+            </div>
+          </li>
+          <li>
+            <span>Siga-nos</span>
+            <div class="icones">
+              <a href="./"><img src="./img/icones/facebook.svg" alt=""></a>
+              <a href="./"><img src="./img/icones/Twitter.svg" alt=""></a>
+              <a href="./"><img src="./img/icones/Linkedin.svg" alt=""></a>
+            </div>
+          </li>
+        </ul>
+        <span class="footer-fim">Alguns direitos reservados © João Restaurant's Group</span>
       </div>
+
     </div>
   </footer>
 </body>
