Cardapio sobremesas feito

--- a/cardapio.html
+++ b/cardapio.html
@@ -29,26 +29,38 @@
     </div>
   </header>
   <main class="cardapio">
-    <article aria-label="introdução" class="pratos-introducao container">
+    <article aria-label="introdução" class="cardapio-introducao container">
       <span class="font-2-l cor-c9">Conheça as melhores opções da gastronomia fina</span>
     </article>
-    <section class="pratos-bg">
-      <div class="pratos-conteudo container">
+    <section class="prato-bg">
+      <div class="prato-conteudo container">
         <div>
           <h1 class="font-1-xl cor-c7">Pratos</h1>
           <p class="font-2-s cor-c7">Os melhores pratos da gastronomia mundial. Venha saborear essa explosão de sabores consagrada pelos melhores chefs do mundo.</p>
           <picture>
             <img src="./img/pratos/prato0.jpg" alt="">
           </picture>
-          <a class="font-2-s cor-p8" href="./pratos.html">CONHEÇA AGORA</a>
+          <a class="font-2-s cor-p8 link" href="./pratos.html">CONHEÇA AGORA</a>
         </div>
         <picture>
           <img src="./img/pratos/prato0.jpg" alt="">
         </picture>
       </div>
     </section>
-    <section class="sobremesas">
-
+    <section class="sobremesa-bg">
+      <div class="sobremesa-conteudo container">
+        <picture>
+          <img src="./img/pratos/sobremesa0.jpg" alt="">
+        </picture>
+        <div>
+          <h1 class="font-1-xl cor-p1">Sobremesas</h1>
+          <p class="font-2-s cor-c1">As melhores e mais consagradas sobremesas do mundo você só encontra aqui. Descubra um novo jeito de experimentar uma sobremesa.</p>
+          <picture>
+            <img src="./img/pratos/sobremesa0.jpg" alt="">
+          </picture>
+          <a class="font-2-s cor-p1 link" href="./sobremesas.html">CONHEÇA AGORA</a>
+        </div>
+      </div>
     </section>
   </main>
   <footer>
