--- a/cardapio/cardapio.html
+++ b/cardapio/cardapio.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <meta name="description" content="Joäo Restaurant's. O melhor restarante de gastronomia fina do mundo."> -->
   <!-- Estilos -->
-  <link rel="preload" href="./css/style.css" as="style">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="icon" type="image/x-icon" href="./Favicon.svg">
+  <link rel="preload" href="../css/style.css" as="style">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" type="image/x-icon" href="../Favicon.svg">
   <!-- Fontes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,9 +20,9 @@
   <header>
     <div class="header-bg">
       <div class="header container">
-        <a href="./"><img src="./img/icones/logo.svg" alt="" width="70" height="53"></a>
+        <a href="../"><img src="../img/icones/logo.svg" alt="" width="70" height="53"></a>
         <ul class="font-2-l-2 cor-c9">
-          <li> <a href="./unidades.html">Unidades</a></li>
+          <li> <a href="../unidades.html">Unidades</a></li>
           <li> <a href="./cardapio.html">Cardápio</a></li>
         </ul>
       </div>
@@ -38,25 +38,25 @@
           <h1 class="font-1-xl cor-c7">Pratos</h1>
           <p class="font-2-s cor-c7">Os melhores pratos da gastronomia mundial. Venha saborear essa explosão de sabores consagrada pelos melhores chefs do mundo.</p>
           <picture>
-            <img src="./img/pratos/prato0.jpg" alt="">
+            <img src="../img/pratos/prato0.jpg" alt="">
           </picture>
           <a class="font-2-s cor-p8 link" href="./pratos.html">CONHEÇA AGORA</a>
         </div>
         <picture>
-          <img src="./img/pratos/prato0.jpg" alt="">
+          <img src="../img/pratos/prato0.jpg" alt="">
         </picture>
       </div>
     </section>
     <section class="sobremesa-bg">
       <div class="sobremesa-conteudo container">
         <picture>
-          <img src="./img/pratos/sobremesa0.jpg" alt="">
+          <img src="../img/pratos/sobremesa0.jpg" alt="">
         </picture>
         <div>
           <h1 class="font-1-xl cor-p1">Sobremesas</h1>
           <p class="font-2-s cor-c1">As melhores e mais consagradas sobremesas do mundo você só encontra aqui. Descubra um novo jeito de experimentar uma sobremesa.</p>
           <picture>
-            <img src="./img/pratos/sobremesa0.jpg" alt="">
+            <img src="../img/pratos/sobremesa0.jpg" alt="">
           </picture>
           <a class="font-2-s cor-p1 link" href="./sobremesas.html">CONHEÇA AGORA</a>
         </div>
@@ -69,38 +69,38 @@
       <div class="footer-conteudo container font-2-s cor-c7">
         <ul class="footer-links">
           <li>
-            <a href="./unidades.html">Unidades</a>
+            <a href="../unidades.html">Unidades</a>
             <div>
-              <a class="font-2-xs cor-c6" href="./sao-paulo.html">São Paulo</a>
-              <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Rio de Janeiro</a>
+              <a class="font-2-xs cor-c6" href="../sao-paulo.html">São Paulo</a>
+              <a class="font-2-xs cor-c6" href="../rio-de-janeiro.html">Rio de Janeiro</a>
             </div>
           </li>
           <li>
-            <a href="./cardapio.html">Cardapio</a>
+            <a href="../cardapio/cardapio.html">Cardapio</a>
             <div>
               <a class="font-2-xs cor-c6" href="./pratos.html">Pratos</a>
-              <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Sobremesas</a>
+              <a class="font-2-xs cor-c6" href="./sobremesas.html">Sobremesas</a>
             </div>
           </li>
           <li>
-            <a href="./cardapio.html">Contatos</a>
+            <a>Contatos</a>
             <div>
-              <a class="font-2-xs cor-c6" href="./fale-conosco.html">Fale conosco</a>
-              <a class="font-2-xs cor-c6" href="./trabalhe_conosco.html">Trabalhe conosco</a>
+              <a class="font-2-xs cor-c6" href="../fale-conosco.html">Fale conosco</a>
+              <a class="font-2-xs cor-c6" href="../trabalhe_conosco.html">Trabalhe conosco</a>
             </div>
           </li>
           <li>
-            <a href="./cardapio.html">Outros</a>
+            <a href="../termos.html">Outros</a>
             <div>
-              <a class="font-2-xs cor-c6" href="./termos.html">Termos e condições</a>
+              <a class="font-2-xs cor-c6" href="../termos.html">Termos e condições</a>
             </div>
           </li>
           <li>
             <span>Siga-nos</span>
             <div class="icones">
-              <a href="./"><img src="./img/icones/facebook.svg" alt=""></a>
-              <a href="./"><img src="./img/icones/Twitter.svg" alt=""></a>
-              <a href="./"><img src="./img/icones/Linkedin.svg" alt=""></a>
+              <a href="../"><img src="../img/icones/facebook.svg" alt=""></a>
+              <a href="../"><img src="../img/icones/Twitter.svg" alt=""></a>
+              <a href="../"><img src="../img/icones/Linkedin.svg" alt=""></a>
             </div>
           </li>
         </ul>
@@ -109,7 +109,7 @@
 
     </div>
   </footer>
-  <script src="./script.js"></script>
+  <script src="../script.js"></script>
 </body>
 
 </html>
