--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="./"><img src="./img/icones/logo.svg" alt="" width="70" height="53"></a>
         <ul class="font-2-l-2 cor-c9">
           <li> <a href="./unidades.html">Unidades</a></li>
-          <li> <a href="./cardapio.html">Cardápio</a></li>
+          <li> <a href="./cardapio/cardapio.html">Cardápio</a></li>
         </ul>
       </div>
     </div>
@@ -56,7 +56,7 @@
           <div class="home-cardapio-conteudo">
             <h1 class="font-1-x cor-p1">Cardápio</h1>
             <p class="font-2-s cor-c2">Com um dos cardápios mais variados do mundo, a João Restaurant's se destaca pela qualidade em seus produtos selecionados direto do produtor. </p>
-            <a class="font-2-s-1 cor-c9 botao" href="./cardapio.html">Saiba mais</a>
+            <a class="font-2-s-1 cor-c9 botao" href="./cardapio/cardapio.html">Saiba mais</a>
           </div>
           <picture class="home-cardapio-detalhe_e">
             <img src="./img/icones/detalhe_e.svg" alt="">
@@ -91,21 +91,21 @@
             </div>
           </li>
           <li>
-            <a href="./cardapio.html">Cardapio</a>
+            <a href="./cardapio/cardapio.html">Cardapio</a>
             <div>
-              <a class="font-2-xs cor-c6" href="./pratos.html">Pratos</a>
-              <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Sobremesas</a>
+              <a class="font-2-xs cor-c6" href="../pratos.html">Pratos</a>
+              <a class="font-2-xs cor-c6" href="../sobremesas.html">Sobremesas</a>
             </div>
           </li>
           <li>
-            <a href="./cardapio.html">Contatos</a>
+            <a>Contatos</a>
             <div>
               <a class="font-2-xs cor-c6" href="./fale-conosco.html">Fale conosco</a>
               <a class="font-2-xs cor-c6" href="./trabalhe_conosco.html">Trabalhe conosco</a>
             </div>
           </li>
           <li>
-            <a href="./cardapio.html">Outros</a>
+            <a href="./termos.html">Outros</a>
             <div>
               <a class="font-2-xs cor-c6" href="./termos.html">Termos e condições</a>
             </div>
