--- a/cardapio/cardapio.html
+++ b/cardapio/cardapio.html
@@ -30,7 +30,7 @@
   </header>
   <main class="cardapio">
     <article aria-label="introdução" class="cardapio-introducao container">
-      <span class="font-2-l cor-c9">Conheça as melhores opções da gastronomia fina</span>
+      <span class="font-2-l cor-c9 titulo">Conheça as melhores opções da gastronomia fina</span>
     </article>
     <section class="prato-bg">
       <div class="prato-conteudo container">
