--- a/cardapio/pratos.html
+++ b/cardapio/pratos.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,500;0,600;0,700;1,300;1,500&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
-  <title>Cardápio</title>
+  <title>Pratos</title>
 </head>
 
 <body id="pratos">
@@ -28,13 +28,13 @@
       </div>
     </div>
   </header>
-  <main class="pratos">
-    <article class="pratos-introducao container">
-      <span class="font-2-l cor-c9">Veja alguns de nossos melhores pratos</span>
+  <main class="pagina-bg item">
+    <article class="item-introducao container">
+      <span class="font-2-l cor-c9 titulo">Veja alguns de nossos melhores pratos</span>
     </article>
-    <section class="pratos-bg">
-      <h1 class="font-2-xl-1 cor-c9 container">Pratos</h1>
-      <div class="pratos-conteudo container cor-c9">
+    <section class="item-bg">
+      <h1 class="font-1-x cor-c9 container">Pratos</h1>
+      <div class="item-conteudo container cor-c9">
         <div>
           <picture>
             <img src="../img/pratos/prato1.jpg" alt="">
