--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
     </div>
   </header>
-  <main>
+  <main class="pagina-bg">
     <article>
       <div class="introducao-bg">
         <div class="introducao">
@@ -93,8 +93,8 @@
           <li>
             <a href="./cardapio/cardapio.html">Cardapio</a>
             <div>
-              <a class="font-2-xs cor-c6" href="../pratos.html">Pratos</a>
-              <a class="font-2-xs cor-c6" href="../sobremesas.html">Sobremesas</a>
+              <a class="font-2-xs cor-c6" href="./cardapio/pratos.html">Pratos</a>
+              <a class="font-2-xs cor-c6" href="./cardapio/sobremesas.html">Sobremesas</a>
             </div>
           </li>
           <li>
