--- a/termos.html
+++ b/termos.html
@@ -65,8 +65,8 @@
           <li>
             <a href="./cardapio/cardapio.html">Cardapio</a>
             <div>
-              <a class="font-2-xs cor-c6" href="../pratos.html">Pratos</a>
-              <a class="font-2-xs cor-c6" href="../sobremesas.html">Sobremesas</a>
+              <a class="font-2-xs cor-c6" href="./cardapio/pratos.html">Pratos</a>
+              <a class="font-2-xs cor-c6" href="./cardapio/sobremesas.html">Sobremesas</a>
             </div>
           </li>
           <li>
@@ -96,4 +96,5 @@
 
     </div>
   </footer>
+  <script src="./script.js"></script>
 </body>
