--- a/trabalhe_conosco.html
+++ b/trabalhe_conosco.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,500;0,600;0,700;1,300;1,500&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
-  <title>Unidades</title>
+  <title>Trabalhe conosco</title>
 </head>
 
 <body id="trabalhe_conosco">
@@ -28,9 +28,9 @@
       </div>
     </div>
   </header>
-  <main>
+  <main class="pagina-bg">
     <div class="trabalhe-intro container">
-      <p class="font-2-l cor-c9 ">Faça parte da melhor equipe gastronomia do mundo.</p>
+      <p class="font-2-l cor-c9 titulo">Faça parte da melhor equipe gastronomia do mundo.</p>
     </div>
     <section class="formulario">
       <div class="container">
@@ -99,8 +99,8 @@
           <li>
             <a href="./cardapio/cardapio.html">Cardapio</a>
             <div>
-              <a class="font-2-xs cor-c6" href="../pratos.html">Pratos</a>
-              <a class="font-2-xs cor-c6" href="../sobremesas.html">Sobremesas</a>
+              <a class="font-2-xs cor-c6" href="./cardapio/pratos.html">Pratos</a>
+              <a class="font-2-xs cor-c6" href="./cardapio/sobremesas.html">Sobremesas</a>
             </div>
           </li>
           <li>
