--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <body id="home">
   <header>
     <div class="header-bg">
-      <div class="header container">
+      <nav class="header container">
         <a href="./"><img src="./img/icones/logo.svg" alt="" width="70" height="53"></a>
         <ul class="font-2-l-2 cor-c9">
-          <li> <a href="./unidades.html">Unidades</a></li>
+          <li> <a href="./unidades/unidades.html">Unidades</a></li>
           <li> <a href="./cardapio/cardapio.html">Cardápio</a></li>
         </ul>
-      </div>
+      </nav>
     </div>
   </header>
   <main class="pagina-bg">
@@ -84,7 +84,7 @@
       <div class="footer-conteudo container font-2-s cor-c7">
         <ul class="footer-links">
           <li>
-            <a href="./unidades.html">Unidades</a>
+            <a href="./unidades/unidades.html">Unidades</a>
             <div>
               <a class="font-2-xs cor-c6" href="./sao-paulo.html">São Paulo</a>
               <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Rio de Janeiro</a>
