--- a/unidades/unidades.html
+++ b/unidades/unidades.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <meta name="description" content="Joäo Restaurant's. O melhor restarante de gastronomia fina do mundo."> -->
   <!-- Estilos -->
-  <link rel="preload" href="./css/style.css" as="style">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="icon" type="image/x-icon" href="./Favicon.svg">
+  <link rel="preload" href="../css/style.css" as="style">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" type="image/x-icon" href="../Favicon.svg">
   <!-- Fontes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,49 +19,47 @@
 <body id="unidades">
   <header>
     <div class="header-bg">
-      <div class="header container">
-        <a href="./"><img src="./img/icones/logo.svg" alt="" width="70" height="53"></a>
+      <nav class="header container">
+        <a href="./"><img src="../img/icones/logo.svg" alt="" width="70" height="53"></a>
         <ul class="font-2-l-2 cor-c9">
           <li> <a href="./unidades.html">Unidades</a></li>
-          <li> <a href="./cardapio/cardapio.html">Cardápio</a></li>
+          <li> <a href="../cardapio/cardapio.html">Cardápio</a></li>
         </ul>
-      </div>
+      </nav>
     </div>
   </header>
-  <main class="unidades">
-    <div class="unidades-intro container">
-      <p class="font-2-l cor-c9 ">Venha conhecer uma de nossas unidades</p>
-    </div>
-    <article>
-      <div class="unidades-bg">
-        <div class="unidade-sp container ">
-          <picture class="pic-img1">
-            <img class="img1" src="./img/cidade1-min.jpg" alt="">
+  <main class="unidades pagina-bg">
+    <article class="unidades-introducao container">
+      <p class="font-2-l cor-c9">Venha conhecer uma de nossas unidades</p>
+    </article>
+    <section class="unidades-bg">
+      <div class="unidade-sp container ">
+        <picture>
+          <img src="../img/cidade1-min.jpg" alt="">
+        </picture>
+        <div>
+          <h1 class="font-1-xl cor-p3">São Paulo</h1>
+          <p class="font-2-s cor-c2">A mais antiga e tradicional unidade da João Restaurant's, localizada em um dos mais luxuosos bairros da maior metrópole da América Latina</p>
+          <picture>
+            <img src="../img/cidade1-min.jpg" alt="">
           </picture>
-          <div class="unidade-sp-conteudo">
-            <h1 class="font-1-xl cor-p3">São Paulo</h1>
-            <p class="font-2-s cor-c2">A mais antiga e tradicional unidade da João Restaurant's, localizada em um dos mais luxuosos bairros da maior metrópole da América Latina</p>
-            <picture>
-              <img class="img2" src="./img/cidade1-min.jpg" alt="">
-            </picture>
-            <p class="font-2-s cor-c2">Rua Professor Azevedo Amaral, 70 Piso Térreo - Jardim Paulista, São Paulo - SP, 01409-030</p>
-          </div>
-        </div>
-        <div class="unidade-rj container">
-          <div class="unidade-rj-conteudo">
-            <h1 class="font-1-xl cor-p3">Rio de Janeiro</h1>
-            <p class="font-2-s cor-c2">Venha conhecer a mais nova unidade localizada na cidade maravilhosa, o Rio de Janeiro.</p>
-            <picture>
-              <img class="img2" src="./img/cidade2-min.jpg" alt="">
-            </picture>
-            <p class="font-2-s cor-c2">Rua José Linhares, 85 - Leblon, Rio de Janeiro - RJ, 22430-220</p>
-          </div>
-          <picture class="pic-img1">
-            <img class="img1" src="./img/cidade2-min.jpg" alt="">
-          </picture>
+          <a href="./sp" class="font-2-s cor-p2 link">CONHEÇA AGORA</a>
         </div>
       </div>
-    </article>
+      <div class="unidade-rj container">
+        <div class="unidade-rj-conteudo">
+          <h1 class="font-1-xl cor-p3">Rio de Janeiro</h1>
+          <p class="font-2-s cor-c2">Venha conhecer a mais nova unidade localizada na cidade maravilhosa, o Rio de Janeiro.</p>
+          <picture>
+            <img class="img2" src="../img/cidade2-min.jpg" alt="">
+          </picture>
+          <a href="./rj" class="font-2-s cor-p2 link">CONHEÇA AGORA</a>
+        </div>
+        <picture class="pic-img1">
+          <img class="img1" src="../img/cidade2-min.jpg" alt="">
+        </picture>
+      </div>
+    </section>
   </main>
   <footer>
     <div class="footer-bg">
@@ -69,7 +67,7 @@
       <div class="footer-conteudo container font-2-s cor-c7">
         <ul class="footer-links">
           <li>
-            <a href="./unidades.html">Unidades</a>
+            <a href="./unidades/unidades.html">Unidades</a>
             <div>
               <a class="font-2-xs cor-c6" href="./sao-paulo.html">São Paulo</a>
               <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Rio de Janeiro</a>
@@ -109,7 +107,7 @@
 
     </div>
   </footer>
-  <script src="./script.js"></script>
+  <script src="../script.js"></script>
 </body>
 
 </html>
