--- a/cardapio/sobremesas.html
+++ b/cardapio/sobremesas.html
@@ -19,13 +19,13 @@
 <body id="sobremesas">
   <header>
     <div class="header-bg">
-      <div class="header container">
+      <nav class="header container">
         <a href="../"><img src="../img/icones/logo.svg" alt="" width="70" height="53"></a>
         <ul class="font-2-l-2 cor-c9">
           <li> <a href="../unidades.html">Unidades</a></li>
           <li> <a href="./cardapio.html">Cardápio</a></li>
         </ul>
-      </div>
+      </nav>
     </div>
   </header>
   <main class="pagina-bg item">
