--- a/trabalhe_conosco.html
+++ b/trabalhe_conosco.html
@@ -20,11 +20,13 @@
   <header>
     <div class="header-bg">
       <div class="header container">
-        <a href="./"><img src="./img/icones/logo.svg" alt="" width="70" height="53"></a>
-        <ul class="font-2-l-2 cor-c9">
-          <li> <a href="./unidades.html">Unidades</a></li>
-          <li> <a href="./cardapio/cardapio.html">Cardápio</a></li>
-        </ul>
+        <nav>
+          <a href="./"><img src="./img/icones/logo.svg" alt="" width="70" height="53"></a>
+          <ul class="font-2-l-2 cor-c9">
+            <li> <a href="./unidades/unidades.html">Unidades</a></li>
+            <li> <a href="./cardapio/cardapio.html">Cardápio</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
   </header>
@@ -90,7 +92,7 @@
       <div class="footer-conteudo container font-2-s cor-c7">
         <ul class="footer-links">
           <li>
-            <a href="./unidades.html">Unidades</a>
+            <a href="./unidades/unidades.html">Unidades</a>
             <div>
               <a class="font-2-xs cor-c6" href="./sao-paulo.html">São Paulo</a>
               <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Rio de Janeiro</a>
